# waffle_con

./: CHANGELOG.md  Cargo.toml  README.md
benches/: consensus_bench.rs
src/: cdwfa_config.rs  consensus.rs  dual_consensus.rs  dynamic_wfa.rs  example_gen.rs  lib.rs  multi_consensus.rs  pqueue_tracker.rs  priority_consensus.rs  sequence_alignment.rs
tests/: dual_001.csv  dual_early_termination_001.csv  length_gap_001.csv  multi_err_001.csv  multi_err_002.csv  multi_exact_001.csv  multi_exact_002.csv  multi_postcon_001.csv  multi_samesplit_001.csv  priority_001.csv  priority_002.csv  priority_003.csv
