[package]
name = "waffle_con"
version = "0.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.13.0"
itertools = "0.12.1"
log = "0.4.20"
priority-queue = "1.3.2"
rustc-hash = "1.1.0"
simple-error = "0.3.0"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"
csv = "1.3.0"
serde = "1.0.197"
test-log = "0.2.16"

[[bench]]
name = "consensus_bench"
harness = false

[profile.release]
lto = true